k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f merged-frontend.yml -o k8s/
    kompose.image-pull-secret: ghcr-credentials
    kompose.service.type: LoadBalancer
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f merged-frontend.yml -o k8s/
        kompose.image-pull-secret: ghcr-credentials
        kompose.service.type: LoadBalancer
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - image: ghcr.io/pibbletv/pibbletv-nginx:latest
          name: nginx
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-cm1
              readOnly: true
              subPath: nginx.conf
            - mountPath: /usr/local/srs/objs/nginx/html/hls/live
              name: hls-data
              readOnly: true
      imagePullSecrets:
        - name: ghcr-credentials
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: nginx.conf
                path: nginx.conf
            name: nginx-cm1
          name: nginx-cm1
        - name: hls-data
          persistentVolumeClaim:
            claimName: hls-data
            readOnly: true
