k8s/srs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f merged-frontend.yml -o k8s/
    kompose.image-pull-secret: ghcr-credentials
    kompose.service.type: NodePort
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: srs
  name: srs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: srs
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f merged-frontend.yml -o k8s/
        kompose.image-pull-secret: ghcr-credentials
        kompose.service.type: NodePort
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: srs
    spec:
      containers:
        - image: ghcr.io/pibbletv/pibbletv-srs:latest
          name: srs
          ports:
            - containerPort: 10080
              protocol: UDP
            - containerPort: 10080
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/local/srs/objs/nginx/html/hls/live
              name: hls-data
      imagePullSecrets:
        - name: ghcr-credentials
      restartPolicy: Always
      volumes:
        - name: hls-data
          persistentVolumeClaim:
            claimName: hls-data
