k8s/nginx-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f merged-frontend.yml -o k8s/
    kompose.image-pull-secret: ghcr-credentials
    kompose.service.type: LoadBalancer
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: nginx-tcp
  name: nginx-tcp
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: nginx
  type: LoadBalancer
