k8s/srs-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f merged-frontend.yml -o k8s/
    kompose.image-pull-secret: ghcr-credentials
    kompose.service.type: NodePort
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: srs
  name: srs
spec:
  ports:
    - name: "10080"
      port: 10080
      protocol: UDP
      targetPort: 10080
    - name: 10080-tcp
      port: 10080
      targetPort: 10080
  selector:
    io.kompose.service: srs
  type: NodePort
