k8s/nginx-tcp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations: {}
  spec:
    rules:
      - host: local.pibbletv.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: api-gateway-tcp
                  port:
                    number: 8078
